[package]
name = "glmpca_fast"
version = "0.1.0"
edition = "2021"
description = "Fast GLM-PCA (Townes et al. 2019) with Rust + optional PyTorch GPU backend."
license = "MIT"
repository = "https://github.com/zongseung/glmpca-fast"

[lib]
name = "glmpca_fast"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
numpy = "0.22"
ndarray = { version = "0.16", features = ["rayon"] }
rayon = "1.10"

[profile.release]
lto = true
codegen-units = 1
